...
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_below="@+id/textThankYouMsg"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textReservationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/textReservationCodeMsg"
            android:layout_marginTop="20dp"
            android:text="123456"
            android:textAlignment="center"
            android:textSize="40sp" />
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textDateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*date info*"
            android:layout_marginStart="25dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textTimeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*time info*"
            android:layout_marginStart="25dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textNumberOfPeopleLabel"
...
            android:layout_height="wrap_content"
            android:text="@string/number_of_people"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textNumberOfPeopleInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*# people*"
            android:layout_marginStart="25dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

    </GridLayout>

...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/returnToMain"
            android:onClick="buttonHomeOnClick" />

        <Button
            android:id="@+id/buttonPreOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/preOrder"
            android:onClick="buttonPreOrderOnClick" />
    </RelativeLayout>
...
