<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="comp3350.rrsys.presentation.CreateReservationActivity">

    <ListView
        android:id="@+id/availabilityList"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="#0000" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#000000" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:id="@+id/textDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="25dp"
            android:text="@string/pick_date"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:windowSoftInputMode="stateHidden" />

        <TextView
            android:id="@+id/textTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="60dp"
            android:text="@string/pick_time"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:windowSoftInputMode="stateHidden" />

        <TextView
            android:id="@+id/textLengthOfStay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/pick_time2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editLengthOfStay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:windowSoftInputMode="stateHidden" />

        <TextView
            android:id="@+id/textNumberOfPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="75dp"
            android:text="@string/number_of_people"
            android:textSize="16sp" />

        <NumberPicker
            android:id="@+id/editNumberOfPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="44dp" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonCheckAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="23dp"
            android:layout_marginBottom="5dp"
            android:enabled="false"
            android:onClick="buttonCheckAvailabilityOnClick"
            android:text="@string/check_availability"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/buttonMakeReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:enabled="false"
            android:onClick="buttonConfirmOnClick"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/done" />
    </RelativeLayout>

</LinearLayout>