<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="comp3350.rrsys.presentation.HomeActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_reservation_system" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonCreateOnClick"
            android:text="@string/create" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:onClick="buttonUpdateOnClick"
            android:text="@string/update" />

        <Button
            android:id="@+id/buttonReview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_marginBottom="60dp"
            android:onClick="buttonReviewOnClick"
            android:text="@string/review" />

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:onClick="buttonMenuOnClick"
            android:text="@string/view_menu" />
    </LinearLayout>

</RelativeLayout>
