...
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="18sp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:layout_marginTop="20dp" />

        <TextView
...
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="18sp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:layout_marginTop="20dp" />

        <TextView
...
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="18sp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/editPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/phone_number_hint"
            android:layout_marginTop="20dp" />
    </GridLayout>
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginStart="25dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:onClick="buttonBackOnClick"/>

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
...
